syntax = "proto3";

package starwars.v1;

option csharp_namespace = "StarWars.V1";
option go_package = "github.com/coso/v1";

import "models.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

